recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:4: error: not found: value avancer
    avancer(length)
    ^